--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
       <h3>Exercises</h3>
       <ul>
         <li><a href="bird/bird.html">서울시새도감</a></li>
-        <li><a href="css_test.html">css</a></li>
-        <li><a href="https://www.figma.com/proto/3vxmxn6Mb6J3pmjc6qm6UB/let's-plant-trees-(final)?type=design&node-id=274-2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=419%3A156"> P1 prototype</a></li>
-        <li><a href="bag/bag.html">My bag</a></li>
-        <li><a href="final/final code.html">P2 </a></li>
-        <li><a href="portfolio/portfolio.html">portfolio </a></li>
+        <li><a href="edit/edit.html">책도감</a></li>
+
       </ul>
     </div>
   </div>
