--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <ul>
         <li><a href="bird/bird.html">서울시새도감</a></li>
         <li><a href="edit/edit.html">책도감</a></li>
-        <li><a href="news/new.html">네이버 지식인</a></li>
+        <li><a href="news/news.html">네이버 지식인</a></li>
 
       </ul>
     </div>
